[#47] refactor: MarkerInfoResponse Point 사용